--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     color: white;
 }
 .container h1{
-    font-size: 2rem;
+    font-size: 1rem;
     display: flex;
     justify-content: center;
 }
@@ -34,7 +34,7 @@
     text-align: center;
 }
 .container h1{
-    font-size: 5.5rem;
+    font-size: 3.5rem;
     margin-top: -6rem;
 }
 .coundown-container div{
@@ -47,4 +47,5 @@
 .coundown-container div span{
     letter-spacing: .3rem;
     font-size: 2.3rem;
+    font-weight: 900;
 }
